src/test/ui/object-safety/object-safety-associated-consts.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-associated-consts.rs:9:1
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: the trait cannot contain associated consts like `X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
